# verathos

./: .gitignore  LICENSE  README.md  chain_config_mainnet.json  chain_config_testnet.json  ecosystem.config.example.js  install.sh  min_compute.yml  pyproject.toml
contracts/: .gitignore  foundry.toml
contracts/abi/: MinerRegistry.json  ModelRegistry.json  PaymentGateway.json  SubnetConfig.json  UsageCheckpointRegistry.json  ValidatorRegistry.json
contracts/script/: Deploy.s.sol  DeployBase.s.sol
contracts/src/: ERC1967Proxy.sol  MinerRegistry.sol  ModelRegistry.sol  PaymentGateway.sol  SubnetConfig.sol  UsageCheckpointRegistry.sol  ValidatorRegistry.sol  VerathosMultisig.sol  X402Gateway.sol
contracts/src/interfaces/: IAddressMapping.sol  IEd25519Verify.sol  IMetagraph.sol  ISr25519Verify.sol  IStakingV2.sol  ITaoFiBridge.sol  IUidLookup.sol
docs/: api.md  bittensor_integration.md  dgx_spark_arm64.md  economic_model.md  inference_protocol.md  integrations.md  intro.md  proof_protocol.md  quickstart.md  research.md  setup.md  user_guide.md
examples/: openai_client.py  streaming_client.py  x402_client.py
neurons/: __init__.py  auto_update.py  canary.py  capacity_audit.py  capacity_audit_combined.py  capacity_audit_discovery.py  capacity_audit_miner.py  capacity_audit_workspace_proof.py  cli.py  config.py  discovery.py  log.py  miner.py  model_resolve.py  network.py  poi.py  rate_limit.py  receipts.py  request_signing.py  scoring.py  shared_state.py  subnet_runtime_config.py  validator.py  validator_db.py  version.py  wizard.py
plugins/autogen-verathos/: README.md
plugins/elizaos-plugin-verathos/: README.md  package.json  tsup.config.ts
plugins/elizaos-plugin-verathos/src/: index.ts  x402.ts
plugins/elizaos-plugin-verathos/src/models/: index.ts  object.ts  text.ts  tokenizer.ts
plugins/elizaos-plugin-verathos/src/providers/: verathos.ts
plugins/elizaos-plugin-verathos/src/utils/: config.ts
plugins/hermes-verathos/: README.md
plugins/langchain-verathos/: LICENSE  README.md  pyproject.toml
plugins/langchain-verathos/langchain_verathos/: __init__.py  chat_models.py
plugins/litellm-verathos/: README.md  pyproject.toml
plugins/litellm-verathos/src/litellm_verathos/: __init__.py  provider.py
plugins/openclaw-verathos/: README.md  index.ts  openclaw.plugin.json  package.json
scripts/: check_capacity_audit_gpu.py  setup_capacity_audit_ingest_nginx.sh  setup_https.sh  setup_miner.sh  setup_validator.sh  show_evm_info.py
verallm/: __init__.py  config.py  helpers.py  introspection.py  log.py  runtime_dependency_migration.py  sampling.py  types.py
verallm/api/: __init__.py  auth.py  client.py  receipt_store.py  serialization.py  server.py  validator_auth.py
verallm/chain/: __init__.py  cache.py  checkpoint.py  config.py  miner_registry.py  mock.py  model_registry.py  payment.py  payment_types.py  provider.py  subnet_config.py  types.py  validator_registry.py  wallet.py
verallm/challenge/: __init__.py  beacon.py
verallm/commitment/: __init__.py  model.py  tensor.py
verallm/crypto/: __init__.py  field.py  field_fast.py  hash_utils.py  merkle.py  mle.py  mle_fast.py  sumcheck.py  sumcheck_fast.py  transcript.py
verallm/miner/: canonical_hook.py  canonical_triton.py
verallm/quantization/: __init__.py  detection.py  int8.py
verallm/registry/: __init__.py  __main__.py  cache.py  gpu.py  models.py  roots.py  tokenizer_hash.py
verallm/runtime/: __init__.py  witness.py  wrapper.py
verallm/tee/: __init__.py  client.py  crypto.py  gpu_detect.py  serialization.py  types.py  weight_hash.py
verallm/tee/attestation/: __init__.py  gpu.py  mock.py  sev_snp.py  tdx.py
verallm/validator/: __init__.py  core.py
verallm/vllm_plugin/: __init__.py  capture_fused_moe.py  capture_linear.py  compat.py  ops.py
