[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-verathos"
version = "0.1.0"
description = "LangChain integration for Verathos — verified LLM inference on Bittensor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Verathos", email = "dev@verathos.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-openai>=0.3.0,<2.0.0",
    "langchain-core>=0.3.0,<3.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://verathos.ai"
Documentation = "https://docs.verathos.ai"
Repository = "https://github.com/verathos/langchain-verathos"

[tool.hatch.build.targets.wheel]
packages = ["langchain_verathos"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
