[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litellm-verathos"
version = "0.1.0"
description = "LiteLLM custom provider for Verathos -- verified LLM inference on Bittensor"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Verathos", email = "dev@verathos.ai" },
]
keywords = ["litellm", "verathos", "bittensor", "verified-inference", "llm", "zkml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.50.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://verathos.ai"
Documentation = "https://github.com/verathos/litellm-verathos"
Repository = "https://github.com/verathos/litellm-verathos"
Issues = "https://github.com/verathos/litellm-verathos/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/litellm_verathos"]
